--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,15 @@
   
     },
   
-    "extends": "eslint:recommended",
+
+      "extends": [
+    
+        "eslint:recommended",
+    
+        "plugin:prettier/recommended"
+    
+      ],
+    
   
     "parserOptions": {
   
